# monkey-interpreter

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: ast.rs  environment.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  repl.rs  token.rs  wasm.rs
src/ast/: expression.rs  mod.rs  statement.rs
src/evaluator/: builtins.rs  environment.rs  mod.rs  object.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs  program.rs
src/wasm/: mod.rs  monkey_interpreter.d.ts  serialization.rs
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  examples.ts  index.css  main.tsx
ui/src/components/: code-input-content.tsx  code-input-header.tsx  examples-sub-header.tsx  header.tsx  icons.tsx  results-content.tsx  results-header.tsx
ui/src/components/ui/: badge.tsx
ui/src/hooks/: use-key-listener.ts  use-window-width.ts
ui/src/lib/: monaco-monkey-lang-definition.ts  monaco.ts  utils.ts
