[package]
edition = "2021"
name = "monkey-interpreter"
version = "0.1.0"

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"

[lib]
crate-type = ["cdylib", "rlib"]
