[package]
description = "A simple interpreter for the monkey programming language"
edition = "2021"
license = "MIT"
name = "monkey-interpreter"
repository = "https://github.com/BenJeau/monkey-interpreter"
version = "0.5.0"

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
